--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.reactivex</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>1.2.6</version>
+    </dependency>
   </dependencies>
 
   <build>
